Clear out isAllIndices TODO item